--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.1.3",
+    "@auth0/nextjs-auth0": "^1.3.1",
+    "next": "^10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
