--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.3.1",
+    "@stripe/react-stripe-js": "1.1.2",
+    "@stripe/stripe-js": "^1.14.0",
     "next": "^10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "stripe": "^8.56.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
