--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "^10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "stripe": "^8.56.0"
+    "stripe": "^8.56.0",
+    "swr": "^0.1.16"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
