--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,12 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "pages/products.jsx",
+    "utils/hooks/useAccessKey.js"
+  ],
   "exclude": ["node_modules"]
 }
