--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,9 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "pages/products.jsx",
-    "utils/hooks/useAccessKey.js"
+    "pages/features.jsx",
+    "utils/hooks/useAccessKey.js",
+    "pages/dashboard.jsx"
   ],
   "exclude": ["node_modules"]
 }
