--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "pages/features.tsx",
     "utils/hooks/useAccessKey.js",
     "pages/dashboard.jsx",
-    "components/StripeEl.jsx",
+    "components/subscriptions/Checkout.jsx",
     "pages/api/charge.ts"
   ],
   "exclude": ["node_modules"]
