--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.3.1",
+    "@nivo/bar": "^0.73.1",
+    "@nivo/core": "^0.73.0",
+    "@nivo/line": "^0.73.0",
     "@stripe/react-stripe-js": "1.1.2",
     "@stripe/stripe-js": "^1.14.0",
     "next": "^10.2.3",
