--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nivo/bar": "^0.73.1",
     "@nivo/core": "^0.73.0",
     "@nivo/line": "^0.73.0",
+    "@nivo/stream": "^0.73.0",
     "@stripe/react-stripe-js": "1.1.2",
     "@stripe/stripe-js": "^1.14.0",
     "next": "^10.2.3",
